force-app/main/default/objects/Statement_Line__c/Statement_Line__c.object-meta.xml
<CustomObject>
    <label>Statement Line</label>
    <nameField>
        <displayFormat>SL-{00000000}</displayFormat>
        <label>Statement Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Statement Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>