force-app/main/default/objects/Statement_Line__c/fields/Financial_Account__c.field-meta.xml
<CustomField>
    <fullName>Financial_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Financial Account</label>
    <referenceTo>FinancialAccount</referenceTo>
    <relationshipLabel>Statement Lines</relationshipLabel>
    <relationshipName>Statement_Lines</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>