force-app/main/default/objects/Statement_Line__c/fields/Financial_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Financial_Account_Name__c</fullName>
    <label>Financial Account Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>