force-app/main/default/objects/Statement_Line__c/fields/Financial_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Financial_Account_Type__c</fullName>
    <label>Financial Account Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>