force-app/main/default/objects/Statement_Line__c/fields/Household_Statement__c.field-meta.xml
<CustomField>
    <fullName>Household_Statement__c</fullName>
    <label>Household Statement</label>
    <referenceTo>Household_Statement__c</referenceTo>
    <relationshipLabel>Statement Lines</relationshipLabel>
    <relationshipName>Statement_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>