force-app/main/default/objects/Statement_Line__c/fields/Is_Joint__c.field-meta.xml
<CustomField>
    <fullName>Is_Joint__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Joint</label>
    <type>Checkbox</type>
</CustomField>