force-app/main/default/objects/Statement_Line__c/fields/Statement_Key__c.field-meta.xml
<CustomField>
    <fullName>Statement_Key__c</fullName>
    <externalId>true</externalId>
    <label>Statement Key</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>